# fastapi-practice

./: .gitignore  README.md  docker-compose.yml
notebook/: concepts.md
services/backend/: Dockerfile  requirements.txt
services/backend/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.11.0
services/backend/pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x057/: 191
services/backend/pkg/sumdb/sum.golang.org/: latest
services/backend/schemas/: users.py
services/backend/src/: main.py  models.py
services/backend/src/auth/: jwthandler.py
services/backend/src/crud/: notes.py  users.py
services/backend/src/schemas/: notes.py  token.py  users.py
services/frontend/: package-lock.json
services/frontend/pkg/sumdb/sum.golang.org/: latest
todo-app/: docker-compose.yml
todo-app/services/backend/src/auth/: jwthandler.py
todo-app/services/backend/src/crud/: users.py
todo-app/services/backend/src/database/: register.py
todo-app/services/backend/src/routes/: users.py
todo-app/services/backend/src/schemas/: notes.py  users.py
todo-app/services/frontend/src/: App.vue  main.js
todo-app/services/frontend/src/store/: index.js
todo_app/services/: docker-compose.yml
todo_app/services/backend/src/auth/: users.py
todo_app/services/backend/src/crud/: notes.py
todo_app/services/frontend/src/: main.js
tutorial/: activate_venv.sh  pyproject.toml
tutorial/src/: main.py  server.py
tutorial/src/logging/: logging.yml
tutorial/src/router/: blog_get.py  blog_post.py
(+9 files in other folders)
